WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122070
Regression: :after content can fail to repaint borders
https://bugs.webkit.org/show_bug.cgi?id=122070
Summary
Regression: :after content can fail to repaint borders
Philip Rogers
Reported
2013-09-28 22:07:20 PDT
Created
attachment 212912
[details]
Testcase wkrev.com/150259 introduced a regression where :after content with borders or outlines can fail to repaint correctly. Patch forthcoming.
Attachments
Testcase
(983 bytes, text/html)
2013-09-28 22:07 PDT
,
Philip Rogers
no flags
Details
Patch
(7.86 KB, patch)
2013-09-28 22:37 PDT
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
Patch
(13.25 KB, patch)
2013-09-29 14:40 PDT
,
Philip Rogers
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philip Rogers
Comment 1
2013-09-28 22:37:49 PDT
Created
attachment 212913
[details]
Patch
Andreas Kling
Comment 2
2013-09-29 06:54:55 PDT
Comment on
attachment 212913
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=212913&action=review
r=me, great find!
> Source/WebCore/rendering/RenderElement.cpp:300 > - return diff == StyleDifferenceRepaint || (diff == StyleDifferenceRepaintIfText && hasImmediateNonWhitespaceTextChild()); > + return diff == StyleDifferenceRepaint || (diff == StyleDifferenceRepaintIfText && hasImmediateNonWhitespaceTextChildOrBorderOrOutline());
The name StyleDifferenceRepaintIfText is no longer entirely accurate. StyleDifferenceRepaintIfTextOrBorderOrOutline? :|
Philip Rogers
Comment 3
2013-09-29 14:40:24 PDT
Created
attachment 212933
[details]
Patch
Philip Rogers
Comment 4
2013-09-29 14:44:15 PDT
Comment on
attachment 212933
[details]
Patch Thanks for the quick review! I updated the enum value to reflect what it actually does (StyleDifferenceRepaintIfTextOrBorderOrOutline). Off to the CQ for you, patch.
WebKit Commit Bot
Comment 5
2013-09-29 15:14:51 PDT
Comment on
attachment 212933
[details]
Patch Clearing flags on attachment: 212933 Committed
r156619
: <
http://trac.webkit.org/changeset/156619
>
WebKit Commit Bot
Comment 6
2013-09-29 15:14:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug